# llm-driven-develop-api

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py  utils.py
app/collections/posts/: post_by_email@email.com_2023-05-31T14:34:00Z.json  post_by_email@email.com_2023-05-31T14:35:00Z.json
app/collections/users/: user_email@email.com.json
app/core/: config.py
